# cuda_bench

./: .gitignore  CMakeLists.txt  README.md
cmake/: cuda_arch.cmake
doc/: nms优化思路.md
include/common/: cuda_check.hpp  timer.hpp
include/gemm/: gemm_api.hpp
include/nms/: nms_api.hpp
script/: rotated_boxes.npy  rotated_boxes_generator.py
src/: main.cpp  reg4x4_gemm.cu
src/gemm/: cublas_gemm.cu  gemm.cpp  naive_gemm.cu  reg4x4_gemm.cu  shared_gemm.cu  vecload_gemm.cu
src/nms/: nms.cpp  rotated_nms.cu
